// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchIcon /> default matches the snapshot 1`] = `
<svg
  aria-label={null}
  fill="none"
  height="10"
  viewBox="0 0 15 15"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14.7 13.3l-3.5-3.5a1 1 0 00-1.4 1.4l3.5 3.5a1 1 0 001.4-1.4z"
    fill="#333"
  />
  <path
    d="M6.3 0a6.3 6.3 0 100 12.6A6.3 6.3 0 006.3 0zm0 2a4.3 4.3 0 110 8.6 4.3 4.3 0 010-8.6z"
    fill="#333"
  />
</svg>
`;

exports[`<SearchIcon /> with some props matches the snapshot 1`] = `
<svg
  aria-label={null}
  fill="none"
  height="10"
  viewBox="0 0 15 15"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="path-class"
    d="M14.7 13.3l-3.5-3.5a1 1 0 00-1.4 1.4l3.5 3.5a1 1 0 001.4-1.4z"
    fill="red"
  />
  <path
    className="circle-class"
    d="M6.3 0a6.3 6.3 0 100 12.6A6.3 6.3 0 006.3 0zm0 2a4.3 4.3 0 110 8.6 4.3 4.3 0 010-8.6z"
    fill="red"
  />
</svg>
`;

exports[`<SearchIcon /> with some props with no \`title\` matches the snapshot 1`] = `
<svg
  aria-label={null}
  fill="none"
  height="10"
  viewBox="0 0 15 15"
  width="12"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M14.7 13.3l-3.5-3.5a1 1 0 00-1.4 1.4l3.5 3.5a1 1 0 001.4-1.4z"
    fill="#333"
  />
  <path
    d="M6.3 0a6.3 6.3 0 100 12.6A6.3 6.3 0 006.3 0zm0 2a4.3 4.3 0 110 8.6 4.3 4.3 0 010-8.6z"
    fill="#333"
  />
</svg>
`;
